# cc-autodl

./: .gitignore  README.md  build-tauri.bat  config.example.yaml  index.html  launcher.py  package-lock.json  package.json  requirements.txt  sidecar.py  sidecar.spec  tsconfig.app.json  vite.config.ts
autodl_manager/: __init__.py  api_server.py  autodl_api.py  autodl_cli.py  cost_tracker.py  daemon.py  db.py  fleet_manager.py  gpu_collector.py  gpu_data.py  instance_registry.py  log_parser.py  session_manager.py  state_manager.py  tray_app.py
autodl_manager/agent/: __init__.py  agent_loop.py  deploy.py  executor.py  mcp_server.py  memory.py  multi_agent.py  observability.py  prompts.py  tools.py  watchdog.py
src/: App.vue  api.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AgentLog.vue  CostAnalysis.vue  Dashboard.vue  InstanceCard.vue  InstanceList.vue  KnowledgeBase.vue  Loading.vue  LogTerminal.vue  RegisterDialog.vue  SettingsPanel.vue  Sidebar.vue  Toast.vue  TopBar.vue
src/composables/: useToast.ts
